# ai-detection

./: README.md  pyproject.toml  report.md
artifacts/: metrics.json  vocab.json
artifacts/lightning_logs/version_0/: metrics.csv
artifacts/lightning_logs/version_1/: hparams.yaml  metrics.csv
artifacts/smoke/: study_metrics.csv  study_summary.json
artifacts/smoke/seq_len_32/: metrics.json
artifacts/smoke/seq_len_32/lightning_logs/version_0/: hparams.yaml
artifacts/smoke/seq_len_32/lightning_logs/version_1/: metrics.csv
artifacts/smoke/seq_len_32/splits/: test.csv
artifacts/smoke/seq_len_64/: metrics.json
artifacts/smoke/seq_len_64/lightning_logs/version_0/: hparams.yaml  metrics.csv
artifacts/study/: study_metrics.csv  study_summary.json
artifacts/study/seq_len_128/: metrics.json
artifacts/study/seq_len_128/lightning_logs/version_0/: metrics.csv
artifacts/study/seq_len_256/: metrics.json
artifacts/study/seq_len_256/lightning_logs/version_0/: hparams.yaml  metrics.csv
artifacts/study/seq_len_64/: metrics.json
artifacts/study/seq_len_64/lightning_logs/version_0/: metrics.csv
scripts/: train_lstm.py
src/ai_detection/: __init__.py  config.py  data.py  model.py  train.py  utils.py
