[project]
name = "ai-detection"
version = "0.1.0"
description = "PyTorch LSTM scaffold for AI vs human text classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.5.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "torch>=2.6.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
